# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "predownload_native"
version = "0.1.0"
edition = "2021"

[features]
default = []

ohos = [
    "netstack_rs",
    "request_utils/ohos",
    "ffrt_rs",
]

[dependencies]
cxx = "1.0.115"
ylong_runtime = { git = "https://gitee.com/openharmony/commonlibrary_rust_ylong_runtime", features = ["full"] }
ylong_http_client = { git = "https://gitee.com/openharmony/commonlibrary_rust_ylong_http", features = [
    "async",
    "c_openssl_3_0",
    "http1_1",
    "ylong_base",
] }
request_utils = { path = "../../request_utils" }
ffrt_rs = { path = "../ffrt_rs", optional = true }
netstack_rs = { path = "../netstack_rs", optional = true }
env_logger = "0.11.3"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
