# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/request/request/request_aafwk.gni")
import("//build/ohos.gni")

ohos_static_library("request_dfx_static") {
  sources = [
    "dump/dump_service_impl.cpp",
    "dump/dump_task_info.cpp",
    "dump/task_info_dumper_factory.cpp",
    "event/fault/task_fault.cpp",
    "event/statistics/task_statistics.cpp",
  ]

  include_dirs = [
    "./dump",
    "./event/fault/",
    "./event/statistics/",
    "${request_path}/services/service/include",
    "${request_path}/frameworks/native/download/include",
  ]

  deps = [ "${request_path}/common:request_common_static" ]

  cflags_cc = [ "-fvisibility=hidden" ]
  configs = [ "//build/config/gcc:symbol_visibility_hidden" ]

  external_deps = [
    "hisysevent_native:libhisysevent",
    "hitrace_native:hitrace_meter",
    "hiviewdfx_hilog_native:libhilog",
  ]
  subsystem_name = "request"
  part_name = "request"
}
