# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "test_common"
version = "0.1.0"
edition = "2021"

[features]
default = ["oh"]

oh = [
    "samgr",
    "ipc",
    "system_ability_fwk",
    "download_server",
]

[dependencies]
ylong_runtime = { git = "https://gitcode.com/openharmony/commonlibrary_rust_ylong_runtime", features = ["full"] }
download_server = { path = "../../services/", optional = true }
system_ability_fwk = { git = "https://gitcode.com/openharmony/systemabilitymgr_safwk", optional = true }
samgr = { git = "https://gitcode.com/openharmony/systemabilitymgr_samgr", optional = true }
ipc = { git = "https://gitcode.com/openharmony/communication_ipc", optional = true }
once_cell = "1.17.0"
