# Copyright (c) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//build/ohos.gni")

rust_cxx("request_ani_cxx_gen") {
  sources = [ "src/wrapper.rs" ]
}

ohos_static_library("request_ani_cxx") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  stack_protector_ret = true

  include_dirs = [
    "include",
    "${target_gen_dir}/src",
  ]

  sources = [
    "src/cxx/subscribe.cpp",
    "src/cxx/wrapper.cpp",
  ]
  sources += get_target_outputs(":request_ani_cxx_gen")
  deps = [
    ":request_ani_cxx_gen",
    "../../native/request:request_native",
    "//third_party/rust/crates/cxx:cxx_cppdeps",
  ]
  external_deps = [
    "ability_runtime:app_context",
    "hilog:libhilog",
    "storage_service:storage_manager_acl",
  ]
  subsystem_name = "request"
  part_name = "request"
}

ohos_rust_shared_library("request_ani") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    boundary_sanitize = true
    all_ubsan = true
    debug = false
  }

  sources = [ "src/lib.rs" ]

  external_deps = [
    "ipc:ipc_rust",
    "netmanager_base:ani_rs",
    "runtime_core:ani",
    "samgr:samgr_rust",
  ]

  deps = [
    ":request_ani_cxx",
    "../../../common/request_core:request_core",
    "../../../common/utils:request_utils",
    "//third_party/rust/crates/cxx:lib",
    "//third_party/rust/crates/serde/serde:lib",
  ]

  clippy_lints = "none"

  subsystem_name = "request"
  part_name = "request"
  output_extension = "so"
}
