# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/request/request/request_aafwk.gni")
import("//build/ohos.gni")

config("upload_lib_config") {
  visibility = [ ":*" ]
  include_dirs = [ "include" ]
  cflags_cc = [
    "-fno-exceptions",
    "-fvisibility-inlines-hidden",
    "-Os",
  ]
  cflags = [ "-DOPENSSL_ARM64_PLATFORM" ]
  ldflags = [ "-Wl,--exclude-libs=ALL" ]
  cflags += [
    "-fdata-sections",
    "-ffunction-sections",
    "-fvisibility=hidden",
    "-Os",
  ]
}

ohos_shared_library("upload_lib") {
  sources = [
    "src/curl_adp.cpp",
    "src/file_adapter.cpp",
    "src/obtain_file.cpp",
    "src/upload_task.cpp",
  ]

  public_configs = [ ":upload_lib_config" ]
  configs = [ "//build/config/gcc:symbol_visibility_hidden" ]
  version_script = "libupload_lib.map"
  deps = [ "${request_path}/common:request_common_static" ]

  external_deps = [
    "ability_base:zuri",
    "ability_runtime:abilitykit_native",
    "ability_runtime:data_ability_helper",
    "c_utils:utils",
    "hisysevent_native:libhisysevent",
    "hitrace_native:hitrace_meter",
    "hiviewdfx_hilog_native:libhilog",
  ]

  subsystem_name = "request"
  part_name = "request"
}
